# eventizer-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
analytics/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_initial.py  0002_rename_tickets_sold_dailyeventstable_seats_sold_and_more.py  0003_rename_event_id_eventtotal_event.py
auth_user/: admin.py  models.py  permissions.py  serailizers.py  urls.py  views.py
auth_user/migrations/: 0001_initial.py
bookings/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_remove_bookings_payment.py  0003_alter_bookings_booking_status.py
core/: exceptions.py
eventizer/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_e_description.py  0002_alter_event_e_end_time_alter_event_e_start_time.py  0002_seats.py  0003_rename_seats_seat_alter_seat_unique_together.py  0004_alter_seat_event.py
host_user/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  views.py
host_user/migrations/: 0001_initial.py  0002_alter_host_company_contact_no.py
llm_rag/: apps.py  tasks.py  urls.py  views.py
payments/: enums.py  models.py  serializers.py  services.py  urls.py  views.py
tickets/: admin.py  models.py  serializers.py  urls.py  views.py
users/: enums.py  models.py  serailizers.py  urls.py  views.py
(+11 files in other folders)
